added Construct stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,27 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# =========================
+# Construct
+# =========================
+*.uistate.xml
+
+*.autosave
+
+*.backup1
+*.backup2
+*.backup3
+*.backup4
+*.backup5
+*.backup6
+*.backup7
+*.backup8
+*.backup9
+*.backup10
+*.backup11
+*.backup12
+*.backup13
+*.backup14
+*.backup15
