--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,4 @@
 *.m4a filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.capx filter=lfs diff=lfs merge=lfs -text
